--- a/index.html
+++ b/index.html
@@ -6,6 +6,20 @@
     <title>Blásta</title>
 </head>
 <body>
+    <nav class="navbar navbar-light bg-light">
+        <a href="#" class="navbar-brand">Blásta</a>
+        <ul class="navbar-nav">
+            <li class="navbar-item">
+                <a href="#" class="nav-link">Home</a>
+            </li>
+            <li class="navbar-item">
+                <a href="#" class="nav-link">Menu</a>
+            </li>
+            <li class="navbar-item">
+                <a href="#" class="nav-link">Booking</a>
+            </li>
+        </ul>
+    </nav>
     <form>
         <div class="form-group">
             <label for="">Date</label>
@@ -23,6 +37,7 @@
             <label for="">Any other Information</label>
             <input type="text" class="form-control">
         </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </body>
 </html>
