Wrap ul in div and add bootstrap link to head element

--- a/index.html
+++ b/index.html
@@ -3,22 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" 
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <title>Blásta</title>
 </head>
 <body>
     <nav class="navbar navbar-light bg-light">
         <a href="#" class="navbar-brand">Blásta</a>
-        <ul class="navbar-nav">
-            <li class="navbar-item">
-                <a href="#" class="nav-link">Home</a>
-            </li>
-            <li class="navbar-item">
-                <a href="#" class="nav-link">Menu</a>
-            </li>
-            <li class="navbar-item">
-                <a href="#" class="nav-link">Booking</a>
-            </li>
-        </ul>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse"></button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+            <ul class="navbar-nav">
+                <li class="navbar-item">
+                    <a href="#" class="nav-link">Home</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#" class="nav-link">Menu</a>
+                </li>
+                <li class="navbar-item">
+                    <a href="#" class="nav-link">Booking</a>
+                </li>
+            </ul>
+        </div>
     </nav>
     <form>
         <div class="form-group">
