--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Blásta</title>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light">
+    <nav class="navbar navbar-light bg-light navbar-expand-lg">
         <a href="#" class="navbar-brand">Blásta</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse"></button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
