--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <body>
     <nav class="navbar navbar-light bg-light navbar-expand-lg">
         <a href="#" class="navbar-brand">Blásta</a>
-        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse"></button>
+        <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
-            <ul class="navbar-nav">
+            <ul class="navbar-nav ml-auto">
                 <li class="navbar-item">
                     <a href="#" class="nav-link">Home</a>
                 </li>
