--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Blásta</title>
 </head>
 <body>
-    <nav class="navbar navbar-light bg-light navbar-expand-lg">
+    <nav class="navbar navbar-light bg-light navbar-expand-lg fixed-top">
         <a href="#" class="navbar-brand">Blásta</a>
         <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
             <span class="navbar-toggler-icon"></span>
@@ -24,11 +24,14 @@
                 <li class="navbar-item">
                     <a href="#" class="nav-link">Booking</a>
                 </li>
+                <li class="navbar-item">
+                    <a href="#" class="nav-link">Contact</a>
+                </li>
             </ul>
         </div>
     </nav>
-    <form>
-        <div class="form-group">
+    <form class="mt-5">
+        <div class="form-group ml-1 mr-1">
             <label for="">Date</label>
             <input type="date" class="form-control">
         </div>
@@ -47,4 +50,10 @@
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </body>
+<script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" 
+integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" 
+integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" 
+integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 </html>
